# loim

./: CMakeLists.txt  difficulty.c  difficulty.h  draw.c  draw.h  econio.c  function.h  functions.c  functions.h  game.c  game.h  main.c  main_menu.c  main_menu.h  menu.c  menu.h  question.c  question.h  scoreboard.c  scoreboard.h  timer.c  timer.h
UI/: MAIN_MENU.txt  MENU1.txt  MENU2.txt
